--- a/airport_app/templates/airport_app/complete_airport.html
+++ b/airport_app/templates/airport_app/complete_airport.html
@@ -21,7 +21,7 @@
         						<div class="panel panel-default table-responsive">
         							<div class="panel-heading">
         								Completed Airport Quarantine Report
-        								<span class="label label-info pull-right" id="totalspan">{{follow_data_count}} Completed cases </span>
+        								<span class="label label-info pull-right" id="totalspan">{{all_data_count}} Completed cases </span>
         							</div>
         							<div class="padding-md clearfix">
         							<table class="table table-hover" id="quarantine_complete_report">
@@ -44,15 +44,15 @@
                           </tr>
                           </thead>
                           <tbody>
-                          {% for follow in page_obj %}
+                          {% for follow in all_data %}
                           <tr>
-                            <td>{{ follow.patient_contacts.last_name }}</td>
-                            <td>{{ follow.patient_contacts.first_name }}</td>
-                            <td>{{ follow.patient_contacts.age }}</td>
-                            <td>{{ follow.patient_contacts.sex }}</td>
-                            <td>{{ follow.patient_contacts.phone_number }}</td>
-                            <td>{{ follow.patient_contacts.origin_country }}</td>
-                            <td>{{ follow.patient_contacts.date_of_contact|date:'d-m-Y' }}</td>
+                            <td>{{ follow.last_name }}</td>
+                            <td>{{ follow.first_name }}</td>
+                            <td>{{ follow.age }}</td>
+                            <td>{{ follow.sex }}</td>
+                            <td>{{ follow.phone_number }}</td>
+                            <td>{{ follow.origin_country }}</td>
+                            <td>{{ follow.date_of_contact|date:'d-m-Y' }}</td>
                             <td>{{ follow.follow_up_day }}</td>
                             <td>{{ follow.body_temperature }}</td>
                             <td>{{ follow.fever }}</td>
